EPG: fix showing first visible channel in channel view if a channel group is chosen

--- a/css/epg.css
+++ b/css/epg.css
@@ -444,10 +444,10 @@ div#time-line .ql.hour {
 .channel-view #broadcasts {
     width: 100% !important;
 }
-.channel-view #broadcasts .broadcasts-list.active {
+#epg.channel-view #broadcasts .broadcasts-list.active {
     display: block;
 }
-.channel-view #broadcasts .broadcasts-list {
+#epg.channel-view #broadcasts .broadcasts-list {
     width: 100% !important;
     height: auto;
     display: none;
